# portable-executable

./: .gitignore  README.md  cabal.project.dist
.github/workflows/: ci-matrix.yml
pe-parser/: CHANGELOG.md  README.md  pe-parser.cabal
pe-parser/src/PE/: Parser.hs
pe-parser/src/PE/Parser/: BaseRelocation.hs  Characteristics.hs  DLLFlags.hs  DataDirectoryEntry.hs  ExceptionTable.hs  ExportDirectoryTable.hs  FileFlags.hs  Headers.hs  ImportDirectoryTable.hs  Machine.hs  PEWord.hs  Pretty.hs  SectionHeader.hs  Subsystem.hs  Vector.hs
pe-parser/tests/doctests/: Main.hs
pe-parser/tools/readpe/: Main.hs
