cabal-version:       2.0
name:                pe-parser
version:             0.1.0.0
synopsis:            A parser for Portable Executable (PE) files
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@galois.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     PE.Parser
  other-modules:       PE.Parser.BaseRelocation
                       PE.Parser.Characteristics
                       PE.Parser.DLLFlags
                       PE.Parser.DataDirectoryEntry
                       PE.Parser.ExportDirectoryTable
                       PE.Parser.ImportDirectoryTable
                       PE.Parser.Machine
                       PE.Parser.PEWord
                       PE.Parser.Pretty
                       PE.Parser.SectionHeader
                       PE.Parser.Subsystem
                       PE.Parser.Vector
  build-depends:       base >= 4.10 && < 5,
                       binary >= 0.8 && < 0.9,
                       bytestring >= 0.9 && < 0.12,
                       bv-sized >= 1 && < 1.1,
                       exceptions >= 0.8 && < 0.11,
                       parameterized-utils >= 2 && < 3,
                       prettyprinter >= 1.7 && < 1.8,
                       text >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat

executable readpe
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  hs-source-dirs:      tools/readpe
  main-is:             Main.hs
  build-depends:       pe-parser,
                       base,
                       bytestring,
                       parameterized-utils,
                       prettyprinter,
                       optparse-applicative
                       
                           
